Part 1 completed. Implemented csrf protection. app payment form has hidden csrf token, which is set as the user's session cookie. When pay script is executed, the current session's cookie is checked against the hidden csrf token value.  If the values don't match, report an error and potential csrf attack. Verified that allowed payments still function properly

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -12,6 +12,7 @@
   </div>
 </div>
 
+<!-- Add CSRF hidden token -->
 {% if user.username == session_user.username %}
 <div class="payment-form">
   <h3 class="payment-header">Make payment?</h3>
@@ -25,7 +26,22 @@
       <div class="form-input"><input name="amount" type="number" /></div>
     </div>
     <input class="form-button" type="submit" value="Pay"/>
+    <input id="csrf_token" type="hidden" name="anticsrf_token">
   </form>
+
+<!-- Set anti csrf hidden token to sesssion cookie -->
+<script>
+  console.log("Cookie: " + document.cookie);
+  var cookie = decodeURIComponent(document.cookie);
+  console.log("Cookie decoded: " + cookie);
+
+  // Strip session id from cookie
+  var sesh = cookie.slice(cookie.indexOf("=")+1, cookie.length)
+  console.log("Session id: " + sesh);
+
+  // Set anticsrf_token to cookie value
+  document.getElementById("csrf_token").value = sesh;
+</script>
 
   {% if payment_error %}
   <div class="error"><p>{{ payment_error }}</p></div>
