Blank csrf redirect

--- a/malicious_app/views/csrf.html
+++ b/malicious_app/views/csrf.html
@@ -25,7 +25,7 @@
   </form>
 
   <!-- TODO: What should src be here? -->
-  <iframe id="a_frame" name="attacker_iframe" src="https://www.survivorshark.com"></iframe>
+  <iframe id="a_frame" name="attacker_iframe" src="about:blank"></iframe>
 
   <!-- Check iframe has loaded -->
   <script>
